Corrigé lien barre du haut

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="/"><img src="favicon.ico" alt="Logo"></img> <span class="title-align">Denis Brogniart – Ah !</span></a>
+                    <a class="navbar-brand" href=""><img src="favicon.ico" alt="Logo"></img> <span class="title-align">Denis Brogniart – Ah !</span></a>
                 </div>
             </div>
         </nav>
