--- a/index.html
+++ b/index.html
@@ -7,79 +7,12 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-slider.min.css" />
+        <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
         <link rel="icon" href="favicon.ico" />
         <link rel="icon" sizes="193x193" href="assets/img/favicon.png">
         <link rel="apple-touch-icon" href="assets/img/favicon.png">
         <link rel="manifest" href="manifest.json">
-        <style type="text/css">
-            #ah_img, button, label {
-                cursor: pointer;
-            }
-            img {
-                max-width: 100%;
-                height: auto;
-            }
-            #compa, #errorLoading, #formInterval, #ah_img, #formModify {
-                display: none;
-            }
-            .mb {
-                margin-bottom: 16px;
-            }
-            .mt {
-                margin-top: 16px;
-            }
-            .small {
-                font-size: 10pt;
-                color: grey;
-                margin-bottom: 0;
-            }
-            #description {
-                font-size: 12pt;
-            }
-            .navbar-brand > img {
-                height: 100%;
-                width: auto;
-                display: inline-block;
-            }
-            .navbar-brand > span {
-                vertical-align: middle;
-            }
-            /* https://codepen.io/jamesbarnett/pen/yILjk */
-            input[type=checkbox] {
-                display:none;
-            }
-            input[type=checkbox] + label:before {
-                font-family: FontAwesome;
-                display: inline-block;
-            }
-            input[type=checkbox] + label:before {
-                content: "\f096";
-            }
-            input[type=checkbox] + label:before {
-                letter-spacing: 5px;
-            }
-            input[type=checkbox]:checked + label:before {
-                content: "\f046";
-            }
-            input[type=checkbox]:checked + label:before {
-                letter-spacing: 5px;
-            }
-            div.disabled {
-                color: grey;
-            }
-            div.checkbox {
-                font-size: 12.5pt;
-            }
-            label {
-                padding: 0 !important;
-            }
-            .link-contrasted-red {
-                color: #00008b;
-            }
-            .link-contrasted-red:hover {
-                color: #0000b5;
-            }
-        </style>
     </head>
     <body>
         <nav class="navbar navbar-inverse">
@@ -93,7 +26,7 @@
             <div class="alert alert-info" id="loading"><i class="fa fa-refresh fa-spin fa-fw"></i> <span id="loadingInfo"></span></div>
             <div class="alert alert-danger" id="errorLoading"><i class="fa fa-times-circle" aria-hidden="true"></i> Une erreur de connexion est survenue lors du chargement des images. Vérifiez votre connexion Internet puis <a href="#" onclick="location.reload();" class="link-contrasted-red">rechargez la page</a>.</div>
             <div class="alert alert-warning" id="compa"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> <span id="compaInfo"></span></div>
-            <p id="description" class="lead">Le fameux Ah de Denis Brogniart (dans l'émission Koh-Lanta) ! Apparemment, les femmes ne savent pas faire de cabanes. Cliquez autant de fois que vous voulez sur Denis pour qu'il dise Ah, ou faites le répéter en cliquant sur le bouton prévu pour cela.</p>
+            <p id="description" class="lead">Le fameux Ah de Denis Brogniart (dans l'émission Koh-Lanta) ! Apparemment, les femmes ne savent pas faire de cabanes. Cliquez autant de fois que vous voulez sur Denis pour qu'il dise Ah, ou faites le répéter en cliquant sur le bouton prévu pour cela. Vous pouvez aussi modifier sa voix !</p>
             <div class="mb" id="imgAhDiv"><img src="" id="ah_img" /></div>
             <div class="row"><div class="col-lg-3 col-sm-3 col-md-3"><ul class="list-group"><li class="list-group-item"><i class="fa fa-comment fa-fw" aria-hidden="true"></i> <span class="badge" id="nb_ah">0</span> Ah prononcés</li></ul></div></div>
             <div class="row">
@@ -122,11 +55,11 @@
                                 <div class="form-group">
                                     <label for="pitchRange"><i class="fa fa-microphone" aria-hidden="true"></i> Pitch (hauteur de la voix) :</label>
                                     <div class="input-group">
-                                        <input type="range" id="pitchRange" class="form-control" value="1.0" min="0.1" max="2" step="0.1"></input>
+                                         <span class="slider-label left">Grave</span> <input type="text" name="pitchRange" id="pitchRange" data-provide="slider" data-slider-min="0.1" data-slider-max="2" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show"> <span class="slider-label right">Aigu</span>
                                     </div>
                                     <label for="speedRange"><i class="fa fa-forward" aria-hidden="true"></i> Vitesse :</label>
                                     <div class="input-group">
-                                        <input type="range" id="speedRange" class="form-control" value="1.0" min="0.1" max="2" step="0.1"></input>
+                                        <span class="slider-label left">Lent</span> <input type="text" name="speedRange" id="speedRange" data-provide="slider" data-slider-min="0.1" data-slider-max="2" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show"> <span class="slider-label right">Rapide</span>
                                     </div>
                                     <div class="input-group mt">
                                         <button class="btn btn-default" type="button" id="validInputModify" onclick="validModify();"><i class="fa fa-check" aria-hidden="true"></i> Valider</button>
@@ -145,9 +78,10 @@
             </div>
             <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
             <p class="small">Version 1.0.4 – 24/07/2017 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
-            <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (plus bas).</p>
+            <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js).</p>
         </div>
         <script type="text/javascript" src="assets/js/soundtouch.min.js"></script>
+        <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
     </body>
 </html>
