--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
             <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
             <p class="small">Version 1.0.4 – 24/07/2017 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
-            <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js).</p>
+            <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js). Dédicace à Flamby.</p>
         </div>
         <script type="text/javascript" src="assets/js/soundtouch.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
