Ajouté fonction reverb

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                                     <div class="input-group">
                                         <span class="slider-label left">Lent</span> <input type="text" name="speedRange" id="speedRange" data-provide="slider" data-slider-min="0.1" data-slider-max="2" data-slider-step="0.1" data-slider-value="1" data-slider-tooltip="show"> <span class="slider-label right">Rapide</span>
                                     </div>
+                                    <div class="input-group checkbox">
+                                        <input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label>
+                                    </div>
                                     <div class="input-group mt">
                                         <button class="btn btn-default" type="button" id="validInputModify" onclick="validModify();"><i class="fa fa-check" aria-hidden="true"></i> Valider</button>
                                     </div>
