--- a/index.html
+++ b/index.html
@@ -79,12 +79,41 @@
                     </form>
                 </div>
             </div>
-            <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
+            <p>By <a href="http://www.eliastiksofts.com" target="_blank">Eliastik</a> – <a href="https://github.com/Eliastik/ah" target="_blank">Projet sur Github</a> – <a href="http://www.eliastiksofts.com/ah/downloads/" target="_blank">Télécharger le projet</a> – <a href="README.md" target="_blank">Fichier Lisez-moi</a> – <a href="#" data-toggle="modal" data-target="#compatibility">Voir les navigateurs compatibles</a> – <a href="https://www.youtube.com/watch?v=6oTsleGsWT8" target="_blank">Scène originale en vidéo</a></p>
             <p class="small">Version 1.0.4 – 24/07/2017 – <a href="https://github.com/Eliastik/ah/releases/latest" target="_blank">Journal des changements</a></p>
             <p style="display: none; visibility: hidden;">Ceci est un easter egg. Bravo pour l'avoir trouvé ! Il y en a un autre à trouver (dans le fichier main.js). Dédicace à Flamby.</p>
         </div>
+        <div id="compatibility" class="modal fade" role="dialog">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Navigateurs compatibles</h4>
+              </div>
+              <div class="modal-body">
+                <p>Denis Brogniart – Ah ! est compatible avec les navigateurs suivants (versions mobiles comprises) :
+                <ul>
+                    <li>Chrome, Chromium et autres navigateurs basés sur Chromium (Opera, Vivaldi, etc.)</li>
+                    <li>Firefox</li>
+                    <li>Safari</li>
+                </ul>
+                <p>Les navigateurs suivants sont partiellement compatibles :</p>
+                <ul>
+                    <li>Internet Explorer (l'animation ne se joue qu'une seule fois, cela est dû à la manière dont ce navigateur gère les fichiers GIF ainsi que son système de mise en cache)</li>
+                    <li>Edge (pareil que pour Internet Explorer)</li>
+                </ul>
+                </p>
+                <p>Pour pouvoir utiliser la fonction &laquo; Modifier la voix &raquo;, il vous faut un navigateur relativement récent (les dernières versions des navigateurs ci-dessus sont usuellement compatibles avec cette fonction).</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times fa-fw" aria-hidden="true"></i> Fermer</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <script type="text/javascript" src="assets/js/soundtouch.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
+        <script type="text/javascript" src="assets/js/bootstrap-native.min.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
     </body>
 </html>
