--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 </ul>
                 <p>Les navigateurs suivants sont partiellement compatibles :</p>
                 <ul>
-                    <li>Internet Explorer (l'animation ne se joue qu'une seule fois, cela est dû à la manière dont ce navigateur gère les fichiers GIF ainsi que son système de mise en cache)</li>
+                    <li>Internet Explorer 9 et plus (l'animation ne se joue qu'une seule fois, cela est dû à la manière dont ce navigateur gère les fichiers GIF ainsi que son système de mise en cache)</li>
                     <li>Edge (pareil que pour Internet Explorer)</li>
                 </ul>
                 </p>
