--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/bootstrap-slider.min.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
         <link rel="icon" href="favicon.ico" />
-        <link rel="icon" sizes="193x193" href="assets/img/favicon.png">
+        <link rel="icon" sizes="368x368" href="assets/img/favicon.png">
         <link rel="apple-touch-icon" href="assets/img/favicon.png">
         <link rel="manifest" href="manifest.json">
     </head>
@@ -65,7 +65,9 @@
                                         <input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label>
                                     </div>
                                     <div class="input-group mt">
-                                        <button class="btn btn-default" type="button" id="validInputModify" onclick="validModify();"><i class="fa fa-check" aria-hidden="true"></i> Valider</button>
+                                        <button class="btn btn-primary" type="button" id="validInputModify" onclick="validModify();"><i class="fa fa-check" aria-hidden="true"></i> Valider</button>
+                                        &nbsp;
+                                        <button class="btn btn-default" type="button" id="saveInputModify" onclick="save(audio_ah_buffer);"><i class="fa fa-save" aria-hidden="true"></i> Sauvegarder</button>
                                     </div>
                                 </div>
                             </div>
@@ -112,6 +114,7 @@
           </div>
         </div>
         <script type="text/javascript" src="assets/js/soundtouch.min.js"></script>
+        <script type="text/javascript" src="assets/js/recorder.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native.min.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
