--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
           </div>
         </div>
-        <script type="text/javascript" src="assets/js/soundtouch.min.js"></script>
+        <script type="text/javascript" src="assets/js/soundtouch.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native.min.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
