Détection automatique du mode de compatibilité

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                                         <input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label>
                                     </div>
                                     <div class="input-group checkbox">
-                                        <input type="checkbox" id="checkCompa" onclick="compaMode();" /> <label for="checkCompa">Mode de compatibilité (cocher si aucun son n'est diffusé)</label>
+                                        <input type="checkbox" id="checkCompa" onclick="compaMode();" /> <label for="checkCompa">Mode de compatibilité (cocher si aucun son n'est diffusé)</label><br />
+                                        <span class="small ml" id="compatAutoDetected">Détecté automatiquement</span>
                                     </div>
                                     <div class="input-group mt">
                                         <button class="btn btn-primary" type="button" id="validInputModify" onclick="validModify(true, false);"><i class="fa fa-check" aria-hidden="true"></i> Valider</button>
