Fonction Vocoder #Alpha

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
                                         <input type="checkbox" id="checkReverb" /> <label for="checkReverb">Réverbération</label>
                                     </div>
                                     <div class="input-group checkbox">
+                                        <input type="checkbox" id="checkVocode" /> <label for="checkVocode">Vocoder (voix robotique)</label>
+                                    </div>
+                                    <div class="input-group checkbox">
                                         <input type="checkbox" id="checkCompa" onclick="compaMode();" /> <label for="checkCompa">Mode de compatibilité (cocher si aucun son n'est diffusé)</label><br />
                                         <span class="small ml" id="compatAutoDetected">Détecté automatiquement</span>
                                     </div>
@@ -119,6 +122,7 @@
           </div>
         </div>
         <script type="text/javascript" src="assets/js/soundtouch.js"></script>
+        <script type="text/javascript" src="assets/js/vocoder.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native.min.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
