Correction et mise à jour de certaines bibliothèques logicielles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  * the Free Software Foundation, either version 3 of the License, or
  * (at your option) any later version.
  * 
- * "Denis Brogniart - Ah" is distributed in the hope that it will be useful,
+ * "Denis Brogniart – Ah !" is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  * GNU General Public License for more details.
@@ -144,6 +144,7 @@
         <script type="text/javascript" src="assets/js/soundtouch.js"></script>
         <script type="text/javascript" src="assets/js/vocoder.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-slider.min.js"></script>
+        <script type="text/javascript" src="assets/js/bootstrap-native-polyfill.min.js"></script>
         <script type="text/javascript" src="assets/js/bootstrap-native.min.js"></script>
         <script type="text/javascript" src="assets/js/main.js"></script>
     </body>
